--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
-  "name": "REPLACE_ME",
+  "name": "CIVIC_TEST",
   "version": "1.0.0",
   "description": "Simple Hello World that listens on localhost:8080",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"no test specified\" && exit 0",
-    "start": "node server.js"
+    "test": "npm run eslint && npm run mocha",
+    "mocha": "mocha test/ --recursive --exit",
+    "start": "node src/"
+  },
+  "dependencies": {
+    "@feathersjs/configuration": "^1.0.2",
+    "@feathersjs/errors": "^3.3.0",
+    "@feathersjs/express": "^1.2.0",
+    "@feathersjs/feathers": "^3.1.3",
+    "@feathersjs/socketio": "^3.2.0",
+    "compression": "^1.7.2",
+    "cors": "^2.8.4",
+    "helmet": "^3.9.0",
+    "serve-favicon": "^2.4.5",
+    "winston": "^2.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "mocha": "^4.1.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
